Lab 4 Request. Session. Cookie

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,6 +6,7 @@
     <a class="p-2 text-dark" href="{{ url_for('index') }}">Form</a>
     <a class="p-2 text-dark" href="{{ url_for('about') }}">About</a>
       <a class="p-2 text-dark" href="{{ url_for('skill') }}">My Skills</a>
+      <a class="p-2 text-dark" href="{{ url_for('login') }}">Log in</a>
   </nav>
   <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
