--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 {% include "navbar.html" %}
+<div class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes list-unstyled text-center">
+                {% for category, message in messages %}
+                    <li class="flash-{{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+</div>
 {% block body %}
 
 {% endblock %}
