--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,20 +1,31 @@
 {% extends "base.html" %}
+{% from "macros.html" import render_field %}
 {% block body %}
 {{ super() }}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form action="/login/user" method="post">
-        <label for="name">Username:</label>
-        <input type="text" name="name" required>
-        <label for="password">Password:</label>
-        <input type="password" name="password" required>
-        <button type="submit">Login</button>
-    </form>
-</body>
-</html>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-header bg-primary text-white text-center">Login</div>
+                <div class="card-body">
+                    <form method="POST" novalidate>
+                        {{ form.csrf_token }}
+
+                        {{ render_field(form.name, class_='custom-class', placeholder='Username') }}
+
+                        {{ render_field(form.password, class_='another-class', placeholder='Password') }}
+
+                        <div class="form-group form-check">
+                            {{ render_field(form.remember) }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-block btn-primary") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
