--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,6 +7,7 @@
     <a class="p-2 text-dark" href="{{ url_for('about') }}">About</a>
       <a class="p-2 text-dark" href="{{ url_for('skill') }}">My Skills</a>
       <a class="p-2 text-dark" href="{{ url_for('login') }}">Log in</a>
+      <a class="p-2 text-dark" href="{{ url_for('todo') }}">To do</a>
   </nav>
   <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
