--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %}
 {% from "macros.html" import render_field %}
-{% block body %}
+{% block head %}
     {{ super() }}
+{% endblock %}
+{% block body %}
+
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="card">
-                    <div class="card-header bg-primary text-white text-center">Login</div>
+                    <div class="card-header bg-primary text-white text-center">Register</div>
                     <div class="card-body">
                         <form method="POST" novalidate>
                             {{ form.csrf_token }}
 
+                            {{ render_field(form.username, class_='custom-class', placeholder='Username') }}
                             {{ render_field(form.email, class_='custom-class', placeholder='Email') }}
-                            {{ render_field(form.password, class_='another-class', placeholder='Password') }}
-
-                            <div class="form-group form-check">
-                                {{ render_field(form.remember) }}
-                            </div>
+                            {{ render_field(form.password, class_='custom-class', placeholder='Password') }}
+                            {{ render_field(form.confirm_password, class_='custom-class', placeholder='Confirm Password') }}
 
                             <div class="form-group">
                                 {{ form.submit(class="btn btn-block btn-primary") }}
