--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,9 +6,11 @@
     <a class="p-2 text-dark" href="{{ url_for('index') }}">Form</a>
     <a class="p-2 text-dark" href="{{ url_for('about') }}">About</a>
       <a class="p-2 text-dark" href="{{ url_for('skill') }}">My Skills</a>
-      <a class="p-2 text-dark" href="{{ url_for('login') }}">Log in</a>
+{#      <a class="p-2 text-dark" href="{{ url_for('login') }}">Log in</a>#}
+      <a class="p-2 text-dark" href="{{ url_for('myuser') }}">My Profile</a></li>
+      <a class="p-2 text-dark" href="{{ url_for('logout') }}">Logout</a></li>
       <a class="p-2 text-dark" href="{{ url_for('register') }}">Register</a>
       <a class="p-2 text-dark" href="{{ url_for('todo') }}">To do</a>
   </nav>
-  <a class="btn btn-outline-primary" href="#">Sign up</a>
+  <a class="btn btn-outline-primary" href="{{ url_for('login') }}">Sign up</a>
 </div>
