--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro render_field(field, class_=None, placeholder=None) %}
     <div class="form-group">
         {{ field.label(class="form-label " ~ (class_ if class_ else '')) }}
-        {{ field(class="form-control " ~ (class_ if class_ else ''), placeholder=placeholder) }}
+        {{ field(class="form-control " ~ (class_ if class_ else ''), placeholder=placeholder, **kwargs) }}
         {% if field.errors %}
             <ul class="errors">
                 {% for error in field.errors %}
@@ -11,4 +11,5 @@
         {% endif %}
     </div>
 {% endmacro %}
+
 
