--- a/app/auth/templates/auth/myuser.html
+++ b/app/auth/templates/auth/myuser.html
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="col-md-4">
-            <img src="{{ url_for('static', filename='profile_photos/' + current_user.image_file) }}" alt="Profile photo" class="img-fluid mb-3">
+            <img src="{{ url_for('.static', filename = current_user.image_filepath) }}" alt="Profile photo" class="img-fluid mb-3">
             <p><strong>Username:</strong> {{ current_user.username }}</p>
             <p><strong>Email:</strong> {{ current_user.email }}</p>
             <h3 class="mt-4">About Me</h3>
@@ -19,7 +19,7 @@
         <div class="col-md-8">
             <div>
                 <h3 class="title mt-4">Change password</h3>
-         <form method="post" action="{{ url_for('change_password') }}" id="change_password_form" novalidate>
+         <form method="post" action="{{ url_for('.change_password') }}" id="change_password_form" novalidate>
     {{ change_password_form.csrf_token }}
     {{ render_field(change_password_form.current_password, class="your-custom-class", placeholder="Your Placeholder") }}
     {{ render_field(change_password_form.new_password, class="your-custom-class", placeholder="Your Placeholder") }}
@@ -30,7 +30,7 @@
             </div>
 
             <h3 class="mt-4">Update profile information</h3>
-            <form method="POST" action="{{ url_for('update_users') }}" enctype="multipart/form-data">
+            <form method="POST" action="{{ url_for('.update_users') }}" enctype="multipart/form-data">
                 {{ update_form.hidden_tag() }}
                 <div class="form-group">
                     {{ update_form.username.label(class="form-label") }}
