Lab 11 (update) CRUD

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,6 +10,9 @@
       <a class="p-2 text-dark" href="{{ url_for('auth.logout') }}">Logout</a></li>
       <a class="p-2 text-dark" href="{{ url_for('auth.register') }}">Register</a>
       <a class="p-2 text-dark" href="{{ url_for('todo.todo') }}">To do</a>
+       <a class="p-2 text-dark" href="{{ url_for('post.create') }}">Posts</a>
+      <a class="p-2 text-dark" href="{{ url_for('post.categories') }}">Categories</a>
+      <a class="p-2 text-dark" href="{{ url_for('post.posts') }}">All posts</a>
   </nav>
   <a class="btn btn-outline-primary" href="{{ url_for('auth.login') }}">Sign up</a>
 </div>
